now running containerised. Updated docker-compose to map port 4080 to 8000 in container. server.py running on port 8000 inside container. Added secret management for Flask SECRET_KEY using Docker secrets. Updated .gitignore to exclude .secrets/ directory. Updated requirements.txt to include pytest and its dependencies for testing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,14 @@ services:
   accmanager_service:
     build: .
     ports:
-      - "8000:8000"
+      - "4080:8000"
     volumes:
       - ./app:/app
     environment:
       - FLASK_ENV=development
+    secrets:
+      - secret_key
+
+secrets:
+  secret_key:
+    file: .secrets/secret_key
