--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,14 @@ Flask==3.1.2
 Flask-SocketIO==5.6.0
 Flask-WTF==1.2.2
 h11==0.16.0
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+packaging==26.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==9.0.2
 python-dotenv==1.2.1
 python-engineio==4.13.0
 python-socketio==5.16.0
