--- a/nginx/other_configs/nginx_redirect_all_to_https.conf
+++ b/nginx/other_configs/nginx_redirect_all_to_https.conf
@@ -3,50 +3,26 @@ events {
 }
 
 http {
+    # MIME types - required for CSS/JS to work
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Rate limiting - must be in http block
     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
 
     upstream flask_app {
         server accmanager_service:8000;
     }
 
-    # HTTP server - local only
-    server {
-        listen 80;
-        server_name 192.168.1.127 localhost;
-        
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            limit_req zone=one burst=20;
-            proxy_pass http://flask_app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /static/ {
-            alias /app/static/;
-            expires 30d;
-        }
-    }
-
-    # HTTP server - external redirect to HTTPS
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name modernaccess.duckdns.org;
-        
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
-
         location / {
-            return 301 https://$server_name:4443$request_uri;
+            return 301 https://$server_name:4443$request_uri; #remove 4443 if not using custom port
         }
     }
 
@@ -61,13 +37,15 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+
+        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
-        add_header Strict-Transport-Security "max-age=31536000" always;
-        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         location / {
+            # Apply rate limit here
             limit_req zone=one burst=20;
             proxy_pass http://flask_app;
             proxy_set_header Host $host;
@@ -75,7 +53,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        # Serve static files directly
         location /static/ {
             alias /app/static/;
             expires 30d;
