--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+alembic==1.18.3
 bidict==0.23.1
 blinker==1.9.0
 click==8.3.1
 Flask==3.1.2
+Flask-Migrate==4.1.0
 Flask-SocketIO==5.6.0
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.3.1
 h11==0.16.0
 iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.10
 MarkupSafe==3.0.3
 packaging==26.0
 pluggy==1.6.0
